fixed long tagline moving menu button below tagline on mobile

--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -18,6 +18,7 @@
   z-index: 10;
   display: inline-block;
   align-self: center;
+  max-width: calc(100% - 60px);
 }
 .site-title {
   @extend %twenty-one-pixels;
