--- a/style.css
+++ b/style.css
@@ -688,6 +688,7 @@ a img {
   z-index: 10;
   display: inline-block;
   align-self: center;
+  max-width: calc(100% - 60px);
 }
 
 .site-title {
